Update svg/info.svg and solve <li> spacing issue

--- a/_sass/_blog-post-content.scss
+++ b/_sass/_blog-post-content.scss
@@ -122,6 +122,7 @@
         font-size: 18px;
         line-height: 180%;
         color: #000085;
+        padding-left: 30px;
         @media screen and (max-width: 580px) {
             font-size: 13px;
         }
@@ -131,6 +132,7 @@
             font-weight: bold; /* If you want it to be bold */
             display: inline-block; /* Needed to add space between the bullet and the text */
             width: 1em; /* Also needed for space (tweak if needed) */
+            margin-left: -30px;
             margin-right: 10px;
         }
     }
@@ -143,6 +145,7 @@
         font-size: 18px;
         line-height: 180%;
         color: #000085;
+        padding-left: 30px;
         @media screen and (max-width: 580px) {
             font-size: 13px;
         }
@@ -152,6 +155,7 @@
             font-weight: bold; /* If you want it to be bold */
             display: inline-block; /* Needed to add space between the bullet and the text */
             width: 1em; /* Also needed for space (tweak if needed) */
+            margin-left: -30px;
             margin-right: 10px;
         }
     }
